More code and styling cleanup
